Projetos/ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;


// Tipos de dados

typedef struct
{
	char Indice[4];
	double Aliquota;
	BOOL Tipo;
	double Total;
	BOOL Sequencia;
} AliquotaRec;


typedef struct
{
	char Indice[4];
	char Descricao[30];
	BOOL PermiteVinculado;
	char FormaPagamento[4];
	double Total;
	int Contador;
} ComprovanteNaoFiscalRec;


typedef struct
{
	char Indice[4];
	char Descricao[30];
	BOOL PermiteVinculado;
	double Total;
	double Data;
	char TipoDoc[30];
} FormaPagamentoRec;



// Funções

DllImport int ECF_AbreCupom(const INTPTR ecfHandle, const PCHAR cpfCnpj, const PCHAR nome, const PCHAR endereco);

DllImport int ECF_AbreCupomVinculado(const INTPTR ecfHandle, const PCHAR coo, const PCHAR codFormaPagto, const double valor);

DllImport int ECF_AbreCupomVinculadoCNF(const INTPTR ecfHandle, const PCHAR coo, const PCHAR codFormaPagto, const PCHAR codComprovanteNaoFiscal, const double valor);

DllImport int ECF_AbreGaveta(const INTPTR ecfHandle);

DllImport int ECF_AbreNaoFiscal(const INTPTR ecfHandle, const PCHAR cpfCnpj);

DllImport int ECF_AbreRelatorioGerencial(const INTPTR ecfHandle, const int indice);

DllImport int ECF_AcharECF(const INTPTR ecfHandle, const BOOL Modelo, const BOOL Porta, const int TimeOut);

DllImport int ECF_AcharPorta(const INTPTR ecfHandle, const int TimeOut);

DllImport int ECF_Ativar(const INTPTR ecfHandle);

DllImport int ECF_CancelaCupom(const INTPTR ecfHandle);

DllImport int ECF_CancelaDescontoAcrescimoItem(const INTPTR ecfHandle, const int numItem);

DllImport int ECF_CancelaDescontoAcrescimoSubTotal(const INTPTR ecfHandle, const char tipoAcrescimoDesconto);

DllImport int ECF_CancelaItemVendido(const INTPTR ecfHandle, const int numItem);

DllImport int ECF_CancelaItemVendidoParcial(const INTPTR ecfHandle, const int numItem, const double quantidade);

DllImport int ECF_CancelaNaoFiscal(const INTPTR ecfHandle);

DllImport int ECF_CarregaAliquotas(const INTPTR ecfHandle);

DllImport int ECF_CarregaComprovantesNaoFiscais(const INTPTR ecfHandle);

DllImport int ECF_CarregaFormasPagamento(const INTPTR ecfHandle);

DllImport int ECF_CorrigeEstadoErro(const INTPTR ecfHandle, const BOOL reducaoZ);

DllImport int ECF_CortaPapel(const INTPTR ecfHandle, const BOOL corteParcial);

DllImport int ECF_Create(INTPTR* ecfHandle);

DllImport int ECF_DAV_Abrir(const INTPTR ecfHandle, const double emissao, const PCHAR decrdocumento, const PCHAR numero, const PCHAR situacao, const PCHAR vendedor, const PCHAR observacao, const PCHAR cpfCnpj, const PCHAR nome, const PCHAR endereco);

DllImport int ECF_DAV_Fechar(const INTPTR ecfHandle, const PCHAR observacao);

DllImport int ECF_DAV_RegistrarItem(const INTPTR ecfHandle, const PCHAR codigo, const PCHAR descricao, const PCHAR unidade, const double quantidade, const double vlrunitario, const double desconto, const double acrescimo, const BOOL cancelado);

DllImport int ECF_Desativar(const INTPTR ecfHandle);

DllImport int ECF_DescontoAcrescimoItemAnterior(const INTPTR ecfHandle, const double valorDescontoAcrescimo, const PCHAR descontoAcrescimo);

DllImport int ECF_Destroy(INTPTR* ecfHandle);

DllImport int ECF_DestroyDadosReducaoZClass(const INTPTR ecfHandle, INTPTR* dadosRZ);

DllImport int ECF_EfetuaPagamento(const INTPTR ecfHandle, const PCHAR codFormaPagto, const double valor, const PCHAR observacao, const BOOL imprimeVinculado);

DllImport int ECF_EfetuaPagamentoNaoFiscal(const INTPTR ecfHandle, const PCHAR codFormaPagto, const double valor, const PCHAR observacao, const BOOL imprimeVinculado);

DllImport int ECF_EstornaPagamento(const INTPTR ecfHandle, const PCHAR codFormaPagtoEstornar, const PCHAR codFormaPagtoEfetivar, const double valor, const PCHAR observacao);

DllImport int ECF_FechaCupom(const INTPTR ecfHandle, const PCHAR observacao);

DllImport int ECF_FechaNaoFiscal(const INTPTR ecfHandle, const PCHAR observacao);

DllImport int ECF_FechaRelatorio(const INTPTR ecfHandle);

DllImport int ECF_GetAguardaImpressao(const INTPTR ecfHandle);

DllImport int ECF_GetAguardandoResposta(const INTPTR ecfHandle);

DllImport int ECF_GetAliquota(const INTPTR ecfHandle, AliquotaRec* aliquota, const int index);

DllImport int ECF_GetArredonda(const INTPTR ecfHandle);

DllImport int ECF_GetAtivo(const INTPTR ecfHandle);

DllImport int ECF_GetBaud(const INTPTR ecfHandle);

DllImport int ECF_GetChequePronto(const INTPTR ecfHandle);

DllImport int ECF_GetCliche(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetCNPJ(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetColunas(const INTPTR ecfHandle);

DllImport int ECF_GetComandoEnviado(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetComandoLOG(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetComprovanteNaoFiscal(const INTPTR ecfHandle, ComprovanteNaoFiscalRec* comprovanteNaoFiscal, const int index);

DllImport int ECF_GetDadosReducaoZ(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetDadosReducaoZClass(const INTPTR ecfHandle, INTPTR* dadosRZ);

DllImport int ECF_GetDadosUltimaReducaoZ(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetDataBits(const INTPTR ecfHandle);

DllImport int ECF_GetDataHora(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetDataHoraSB(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetDataMovimento(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetDecimaisPreco(const INTPTR ecfHandle);

DllImport int ECF_GetDecimaisQtd(const INTPTR ecfHandle);

DllImport int ECF_GetDescricaoGrande(const INTPTR ecfHandle);

DllImport int ECF_GetEmLinha(const INTPTR ecfHandle, const int timeOut);

DllImport int ECF_GetEstado(const INTPTR ecfHandle);

DllImport int ECF_GetFormaPagamento(const INTPTR ecfHandle, FormaPagamentoRec* formaPagamento, const int index);

DllImport int ECF_GetGavetaAberta(const INTPTR ecfHandle);

DllImport int ECF_GetGavetaSinalInvertido(const INTPTR ecfHandle);

DllImport int ECF_GetGrandeTotal(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetHandShake(const INTPTR ecfHandle);

DllImport int ECF_GetHardFlow(const INTPTR ecfHandle);

DllImport int ECF_GetHorarioVerao(const INTPTR ecfHandle);

DllImport int ECF_GetIdentificaConsumidorRodape(const INTPTR ecfHandle);

DllImport int ECF_GetIE(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetIM(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetIntervaloAposComando(const INTPTR ecfHandle);

DllImport int ECF_GetLinhasEntreCupons(const INTPTR ecfHandle);

DllImport int ECF_GetMFD(const INTPTR ecfHandle);

DllImport int ECF_GetModelo(const INTPTR ecfHandle);

DllImport int ECF_GetModeloStr(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCCF(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCDC(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCOO(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCOOInicial(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCRO(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCRZ(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCupom(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumECF(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumGNF(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumGRG(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumLoja(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumSerie(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);