Projetos/ACBrFramework/ACBrFramework.OCX/Defs/ACBrECF.bas


Public Declare Function ECF_AbreCupom Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal cpfCnpj As String, ByVal nome As String, ByVal endereco As String) As Long
Public Declare Function ECF_AbreCupomVinculado Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal coo As String, ByVal codFormaPagto As String, ByVal valor As Double) As Long
Public Declare Function ECF_AbreCupomVinculadoCNF Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal coo As String, ByVal codFormaPagto As String, ByVal codComprovanteNaoFiscal As String, ByVal valor As Double) As Long
Public Declare Function ECF_AbreGaveta Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_AbreNaoFiscal Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal cpfCnpj As String) As Long
Public Declare Function ECF_AbreRelatorioGerencial Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal indice As Long) As Long
Public Declare Function ECF_AcharECF Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal Modelo As Boolean, ByVal Porta As Boolean, ByVal TimeOut As Long) As Long
Public Declare Function ECF_AcharPorta Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal TimeOut As Long) As Long
Public Declare Function ECF_Ativar Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_CancelaCupom Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_CancelaDescontoAcrescimoItem Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal numItem As Long) As Long
Public Declare Function ECF_CancelaDescontoAcrescimoSubTotal Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal tipoAcrescimoDesconto As String) As Long
Public Declare Function ECF_CancelaItemVendido Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal numItem As Long) As Long
Public Declare Function ECF_CancelaItemVendidoParcial Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal numItem As Long, ByVal quantidade As Double) As Long
Public Declare Function ECF_CancelaNaoFiscal Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_CarregaAliquotas Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_CarregaComprovantesNaoFiscais Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_CarregaFormasPagamento Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_CorrigeEstadoErro Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal reducaoZ As Boolean) As Long
Public Declare Function ECF_CortaPapel Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal corteParcial As Boolean) As Long
Public Declare Function ECF_Create Lib "ACBrFramework32.DLL" (ByRef ecfHandle As Long) As Long
Public Declare Function ECF_DAV_Abrir Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal emissao As Double, ByVal decrdocumento As String, ByVal numero As String, ByVal situacao As String, ByVal vendedor As String, ByVal observacao As String, ByVal cpfCnpj As String, ByVal nome As String, ByVal endereco As String) As Long
Public Declare Function ECF_DAV_Fechar Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal observacao As String) As Long
Public Declare Function ECF_DAV_RegistrarItem Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal codigo As String, ByVal descricao As String, ByVal unidade As String, ByVal quantidade As Double, ByVal vlrunitario As Double, ByVal desconto As Double, ByVal acrescimo As Double, ByVal cancelado As Boolean) As Long
Public Declare Function ECF_Desativar Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_DescontoAcrescimoItemAnterior Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal valorDescontoAcrescimo As Double, ByVal descontoAcrescimo As String) As Long
Public Declare Function ECF_Destroy Lib "ACBrFramework32.DLL" (ByRef ecfHandle As Long) As Long
Public Declare Function ECF_DestroyDadosReducaoZClass Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef dadosRZ As Long) As Long
Public Declare Function ECF_EfetuaPagamento Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal codFormaPagto As String, ByVal valor As Double, ByVal observacao As String, ByVal imprimeVinculado As Boolean) As Long
Public Declare Function ECF_EfetuaPagamentoNaoFiscal Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal codFormaPagto As String, ByVal valor As Double, ByVal observacao As String, ByVal imprimeVinculado As Boolean) As Long
Public Declare Function ECF_EstornaPagamento Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal codFormaPagtoEstornar As String, ByVal codFormaPagtoEfetivar As String, ByVal valor As Double, ByVal observacao As String) As Long
Public Declare Function ECF_FechaCupom Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal observacao As String) As Long
Public Declare Function ECF_FechaNaoFiscal Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal observacao As String) As Long
Public Declare Function ECF_FechaRelatorio Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetAguardaImpressao Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetAguardandoResposta Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetAliquota Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef aliquota As AliquotaRec, ByVal index As Long) As Long
Public Declare Function ECF_GetArredonda Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetAtivo Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetBaud Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetChequePronto Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetCliche Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetCNPJ Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetColunas Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetComandoEnviado Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetComandoLOG Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetComprovanteNaoFiscal Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef comprovanteNaoFiscal As ComprovanteNaoFiscalRec, ByVal index As Long) As Long
Public Declare Function ECF_GetDadosReducaoZ Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetDadosReducaoZClass Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef dadosRZ As Long) As Long
Public Declare Function ECF_GetDadosUltimaReducaoZ Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetDataBits Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetDataHora Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef value As Double) As Long
Public Declare Function ECF_GetDataHoraSB Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef value As Double) As Long
Public Declare Function ECF_GetDataMovimento Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef value As Double) As Long
Public Declare Function ECF_GetDecimaisPreco Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetDecimaisQtd Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetDescricaoGrande Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetEmLinha Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal timeOut As Long) As Long
Public Declare Function ECF_GetEstado Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetFormaPagamento Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef formaPagamento As FormaPagamentoRec, ByVal index As Long) As Long
Public Declare Function ECF_GetGavetaAberta Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetGavetaSinalInvertido Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetGrandeTotal Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByRef value As Double) As Long
Public Declare Function ECF_GetHandShake Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetHardFlow Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetHorarioVerao Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetIdentificaConsumidorRodape Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetIE Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetIM Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetIntervaloAposComando Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetLinhasEntreCupons Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetMFD Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetModelo Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long) As Long
Public Declare Function ECF_GetModeloStr Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetNumCCF Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetNumCDC Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetNumCOO Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetNumCOOInicial Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetNumCRO Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetNumCRZ Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetNumCupom Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetNumECF Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetNumGNF Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetNumGRG Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetNumLoja Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
Public Declare Function ECF_GetNumSerie Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal buffer As String, ByVal bufferLen As Long) As Long
